Use Seperate script for debian builds