@@ -11,10 +11,10 @@ override_dh_dwz:
 	# Disable dwz due to Go debug info incompatibility
 
 override_dh_auto_test:
-	$(MAKE) test GO=$(GO) 
+	$(MAKE) test GO=$(GO) VENDOR=1
 
 override_dh_auto_build:
-	$(MAKE) GO=$(GO)
+	$(MAKE) GO=$(GO)  VENDOR=1
 
 override_dh_auto_install:
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/mkdotenv INSTALL_BIN_DIR=/usr/bin INSTALL_MAN_DIR=/usr/share/man/man1
