@@ -1,1 +1,2 @@
 Use Seperate script for debian builds
+Vendor dependencies upon build.
